--- a/xcrawler/ejb/pom.xml
+++ b/xcrawler/ejb/pom.xml
@@ -72,6 +72,11 @@
             <scope>provided</scope>
         </dependency>
 
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.7.10</version>
+		</dependency>
 
         <!-- Test scope dependencies -->
         <dependency>
