--- a/xcrawler-client/pom.xml
+++ b/xcrawler-client/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.xzymon</groupId>
 	<artifactId>xcrawler-client</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 
 	<dependencies>
 		<dependency>
@@ -39,7 +39,7 @@
 						<argument>-classpath</argument>
 						<classpath>
 						</classpath>
-						<argument>com.xzymon.xcrawler.client.embryo.EJBsInvocator</argument>
+						<argument>com.xzymon.xcrawler.client.gui.MainFrame</argument>
 					</arguments>
 				</configuration>
 			</plugin>
@@ -52,12 +52,21 @@
 						<descriptorRefs>
 							<descriptorRef>jar-with-dependencies</descriptorRef>
 						</descriptorRefs>
+						<archive>
+							<manifest>
+								<mainClass>com.xzymon.xcrawler.client.gui.MainFrame</mainClass>
+							</manifest>
+						</archive>
 					</configuration>
-					<archive>
-						<manifest>
-							<mainClass>com.xzymon.xcrawler.client.embryo.EJBsInvocator</mainClass>
-						</manifest>
-					</archive>
+					<executions>
+						<execution>
+							<id>make-assembly</id> <!-- this is used for inheritance merges -->
+							<phase>package</phase> <!-- bind to the packaging phase -->
+							<goals>
+								<goal>single</goal>
+							</goals>
+						</execution>
+					</executions>
 				</configuration>
 			</plugin>
 		</plugins>
