--- a/xcrawler-client/pom.xml
+++ b/xcrawler-client/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.xzymon</groupId>
 	<artifactId>xcrawler-client</artifactId>
-	<version>0.0.1</version>
+	<version>0.1.0</version>
 
 	<dependencies>
 		<dependency>
@@ -15,7 +15,12 @@
 		<dependency>
 			<groupId>com.xzymon</groupId>
 			<artifactId>xcrawler-ejb</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>0.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.7.10</version>
 		</dependency>
 	</dependencies>
 
@@ -39,7 +44,7 @@
 						<argument>-classpath</argument>
 						<classpath>
 						</classpath>
-						<argument>com.xzymon.xcrawler.client.gui.MainFrame</argument>
+						<argument>com.xzymon.xcrawler.client.gui.ExecutorFrame</argument>
 					</arguments>
 				</configuration>
 			</plugin>
@@ -54,7 +59,7 @@
 						</descriptorRefs>
 						<archive>
 							<manifest>
-								<mainClass>com.xzymon.xcrawler.client.gui.MainFrame</mainClass>
+								<mainClass>com.xzymon.xcrawler.client.gui.ExecutorFrame</mainClass>
 							</manifest>
 						</archive>
 					</configuration>
