--- a/xcrawler/ear/pom.xml
+++ b/xcrawler/ear/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <artifactId>xcrawler</artifactId>
         <groupId>com.xzymon</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.1.0</version>
     </parent>
 
     <artifactId>xcrawler-ear</artifactId>
