--- a/xcrawler-client/pom.xml
+++ b/xcrawler-client/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.xzymon</groupId>
 	<artifactId>xcrawler-client</artifactId>
-	<version>0.1.0</version>
+	<version>1.0.0-SNAPSHOT</version>
 
 	<dependencies>
 		<dependency>
@@ -15,12 +15,18 @@
 		<dependency>
 			<groupId>com.xzymon</groupId>
 			<artifactId>xcrawler-ejb</artifactId>
-			<version>0.1.0</version>
+			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-simple</artifactId>
 			<version>1.7.10</version>
+		</dependency>
+		<dependency>
+			<!-- jsoup HTML parser library @ http://jsoup.org/ -->
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.8.1</version>
 		</dependency>
 	</dependencies>
 
