--- a/xcrawler/ejb/pom.xml
+++ b/xcrawler/ejb/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <artifactId>xcrawler</artifactId>
         <groupId>com.xzymon</groupId>
-        <version>0.1.0</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>xcrawler-ejb</artifactId>
@@ -85,11 +85,23 @@
 			<version>1.7.10</version>
 		</dependency>
 
+		<dependency>
+			<groupId>mysql</groupId>
+		    <artifactId>mysql-connector-java</artifactId>
+		    <version>5.1.34</version>
+		</dependency>
+
         <!-- Test scope dependencies -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
+        </dependency>
+        
+        <dependency>
+	      	<groupId>com.xzymon</groupId>
+			<artifactId>xpath-searcher-core</artifactId>
+			<version>0.1.0.Final</version>
         </dependency>
 
         <!-- Optional, but highly recommended -->
