--- a/xcrawler-client/pom.xml
+++ b/xcrawler-client/pom.xml
@@ -46,38 +46,7 @@
 				<configuration>
 					<executable>java</executable>
 					<workingDirectory>${project.build.directory}/exec-working-directory</workingDirectory>
-					<arguments>
-						<argument>-classpath</argument>
-						<classpath>
-						</classpath>
-						<argument>com.xzymon.xcrawler.client.gui.ExecutorFrame</argument>
-					</arguments>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<version>2.5.3</version>
-				<configuration>
-					<configuration>
-						<descriptorRefs>
-							<descriptorRef>jar-with-dependencies</descriptorRef>
-						</descriptorRefs>
-						<archive>
-							<manifest>
-								<mainClass>com.xzymon.xcrawler.client.gui.ExecutorFrame</mainClass>
-							</manifest>
-						</archive>
-					</configuration>
-					<executions>
-						<execution>
-							<id>make-assembly</id> <!-- this is used for inheritance merges -->
-							<phase>package</phase> <!-- bind to the packaging phase -->
-							<goals>
-								<goal>single</goal>
-							</goals>
-						</execution>
-					</executions>
+					<mainClass>com.xzymon.xcrawler.client.gui.ClientFrame</mainClass>
 				</configuration>
 			</plugin>
 		</plugins>
