--- a/xcrawler/ejb/pom.xml
+++ b/xcrawler/ejb/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <artifactId>xcrawler</artifactId>
         <groupId>com.xzymon</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0-SNAPSHOT-3</version>
     </parent>
 
     <artifactId>xcrawler-ejb</artifactId>
