--- a/xcrawler/pom.xml
+++ b/xcrawler/pom.xml
@@ -20,7 +20,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.xzymon</groupId>
     <artifactId>xcrawler</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT-3</version>
     <packaging>pom</packaging>
 
     <url>http://jboss.org/jbossas</url>
